// Specification of the user facing gRPC API.
syntax = "proto3";
package block_producer;

import "requests.proto";
import "responses.proto";

service Api {
    // Submits proven transaction to the Miden network.
    rpc SubmitProvenTransaction(requests.SubmitProvenTransactionRequest) returns (responses.SubmitProvenTransactionResponse) {}
}

